# synvek

./: .gitignore  .gitmodules  readme-cn.md  readme-project-cn.md  readme-project.md  readme.md
.github/workflows/: build-linux-backend-cuda-full.yml  build-linux-vulkan.yml  build-linux.yml  build-macos-intel.yml  build-macos-universal.yml  build-macos-x64.yml  build-macos.yml  build-windows-backend-cuda-full.yml  build-windows-cuda12.6.yml  build-windows-test.yml  build-windows-vulkan.yml  build-windows.yml  build-windows2.yml  make-synvek-release.yml  make-synvek-test.yml  notification.yml  sync-artifacts.yml  sync-code.yml  sync-synvek.yml
docs/: about.md  build.md  index.md  installation.md  package-lock.json  package.json  usage.md
docs/.vitepress/: config.mts
docs/zh/: about.md  build.md  index.md  installation.md  usage.md
synvek_agent/: .eslintrc.js  .gitignore  README.md  package.json
synvek_agent/scripts/: Test.ts  core-tables.sql  init-data.sql
synvek_agent/src/: AttachmentService.ts  Build.ts  ChatDataService.ts  ChatService.ts  Constants.ts  ConversionService.ts  FolderService.ts  GenerationService.ts  MCPService.ts  MCPServiceHelper.ts  Main.ts  ModelServerService.ts  ModelService.ts  PluginService.ts  StartPlugins.ts  SystemService.ts  Types.ts  index.ts
synvek_agent/src/Plugin/: index.ts
synvek_agent/src/Plugin/src/: PluginManager.ts  PluginTypes.ts  SandboxExecutor.ts  SecurityValidator.ts
synvek_agent/src/Utils/: CommonUtils.ts  Logger.ts  NetUtils.ts  RequestUtils.ts  SSHUtils.ts  SqliteUtils.ts  SystemUtils.ts
synvek_agent/test/: AttachmentTest.ts  ChatDataTest.ts  ConversionTest.ts  FolderTest.ts  GenerationTest.ts
synvek_agent/tools/: MCPDemoServer.py
synvek_explorer/: Cargo.toml  Entitlements.plist  readme.md  tauri.conf.json5  tauri.linux.conf.json5  tauri.windows.conf.json5
synvek_explorer/agent_plugins/ExamplePlugin/: ExamplePlugin.ts
synvek_explorer/capabilities/: default.json5
synvek_explorer/config/: config.schema.json  repo_files.json  repos.json
synvek_explorer/icons/: icon.icns
synvek_explorer/service_plugins/demo/: Main.ts
synvek_explorer/src/: lib.rs  main.rs
synvek_service/: Cargo.toml  hello1.ts  hello2.ts  readme.MD
synvek_service/agent_plugins/ExamplePlugin/: plugin.json
synvek_service/agent_plugins/MathFunctionToolsPlugin/: MathFunctionToolsPlugin.ts  plugin.json
synvek_service/config/: config.json  config.schema.json  repo_files.json  repos.json  settings.json  workers.json
synvek_service/src/: api.rs  command.rs  common.rs  config.rs  error.rs  fetch_api.rs  fetch_helper.rs  fetch_service.rs  file_service.rs  lib.rs  main.rs  model_api.rs  model_service.rs  modelscope_helper.rs  process_api.rs  process_service.rs  script_service.rs  sd_api.rs  sd_server.rs  sd_service.rs  synvek.rs  system_api.rs  system_service.rs  utils.rs  worker_api.rs  worker_service.rs
synvek_service/storage/: synvek_storage.db
synvek_web/: .umirc.desktop.ts  .umirc.docker.ts  .umirc.production.ts  .umirc.ts  SyncVersion.ts  UpdateModelFileSize.js  jest.config.js  package-lock.json  package.json  routes.ts
synvek_web/src/: app.ts  global.less  setupTests.ts
synvek_web/src/client/src/: LLMService.ts
synvek_web/src/components/ApplicationsView/: index.tsx
synvek_web/src/components/AudioGenerationView/: index.tsx
synvek_web/src/components/ChatView/: index.less  index.tsx
synvek_web/src/components/Content/: index.tsx
synvek_web/src/components/ControlNetFormWindow/: index.tsx
synvek_web/src/components/DragContext/: index.tsx
synvek_web/src/components/Footer/: index.tsx
synvek_web/src/components/Header/: index.less  index.tsx
synvek_web/src/components/HeaderCommander/: index.less  index.tsx
synvek_web/src/components/HeaderExtra/: index.less  index.tsx
synvek_web/src/components/HeaderMenubar/: index.less  index.tsx
synvek_web/src/components/HeaderNavigator/: index.less  index.tsx
synvek_web/src/layouts/: index.less  index.tsx
synvek_web/src/locales/: en-US.ts  zh-CN.ts
synvek_web/src/pages/: index.tsx
synvek_web/src/styles/: css-variables.less  design-tokens.ts  enhanced-theme.ts  index.ts  theme-manager.ts  theme-utils.ts
(+144 files in other folders)
