[package]
name = "synvek_explorer"
version = "0.4.6"
description = "Run LLM locally with minimal effort"
authors = ["iapoo"]
license = "GPL"
repository = ""
edition = "2024"
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "synvek_explorer_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = ["config-json5"] }

[dependencies]
synvek_service = { path = "./../synvek_service" }

log = "0.4"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = ["devtools", "config-json5"] }
tauri-plugin-decorum = "1.1.1"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.3"
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = "1.45.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-log = "0.2.0"
tracing-appender = "0.2"
zip = "0.6.6"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

#[features]
#cuda = ["synvek_service/cuda"]
#cudnn = ["synvek_service/cudnn"]
#accelerate = ["synvek_service/accelerate"]