[package]
name = "synvek_service"
version = "0.2.1"
edition = "2024"


[dependencies]
deno = {version = "2.3.5", path = "./../third_party/deno/cli"}
#mistralrs-server = {version = "0.6.0", path = "./../third_party/mistral.rs/mistralrs-server"}
hf-hub = { path = "./../third_party/hf-hub", default-features = false, features = ["ureq","tokio","rustls-tls",] }
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-web-lab = "0.2"  # 提供SSE支持
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
base64 = "0.21.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
config-rs = "0.1.3"
directories = "5.0"
futures = "0.3.31"
rand = "0.9.1"
image = "0.25.6"
libloading = "0.8.8"
log = "0.4.27"
md5 = "0.7"
# It is used to replace dependence and prevent build failure
pretty_yaml = "0.5.1"
reqwest = { version = "0.12", features = ["json"] }
schemars = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3", features = ["macros", "parsing"] }
tokenizers = "0.21.1"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-log = "0.2.0"
tracing-appender = "0.2"
tracing-chrome = "0.7.2"
uuid = { version = "1.7", features = ["v4", "serde"] }
#tauri = { version = "2.5.0", features = [] }
#rustpython = "0.4.0"
#[features]
#cuda = ["mistralrs-server/cuda"]
#cudnn = ["mistralrs-server/cudnn"]
#accelerate = ["mistralrs-server/accelerate"]